Major refactoring breaking up into modules